--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@google-cloud/text-to-speech": "^5.6.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.460.0",
@@ -21,7 +22,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-smart-autocomplete": "^1.0.2"
+    "react-smart-autocomplete": "^1.0.2",
+    "say": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
