--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@google-cloud/text-to-speech": "^5.6.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.9.0",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.460.0",
-    "predictionary": "^1.3.1",
+    "popular-english-words": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
