--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.13.0",
     "@google-cloud/text-to-speech": "^5.6.0",
     "axios": "^1.7.7",
+    "firebase": "11.1.0",
+    "firebase-admin": "^13.0.2",
     "framer-motion": "^11.9.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.460.0",
